--- a/assets/styles/sass/upload.sass
+++ b/assets/styles/sass/upload.sass
@@ -1,5 +1,4 @@
 body
-  color: white
   margin: 0
   padding: 0
   font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, "Helvetica", Arial, Oxygen, Ubuntu, Cantarell, sans-serif
@@ -19,3 +18,10 @@ body
 
     &.hover
       background-color: yellow
+
+
+    &.step2
+      display: none
+
+.hidden
+  display: none
