--- a/assets/styles/sass/upload.sass
+++ b/assets/styles/sass/upload.sass
@@ -1,27 +1,47 @@
 body
   margin: 0
   padding: 0
-  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, "Helvetica", Arial, Oxygen, Ubuntu, Cantarell, sans-serif
-  font-size: 16px
+  font-family: -apple-system, "Segoe UI", Roboto, "Helvetica", Arial, Oxygen, Ubuntu, Cantarell, sans-serif
   height: 100%
 
   #upload
     width: 50%
     box-sizing: border-box
-    margin: 100px auto
+    margin: 50px auto
     padding: 20px
     height: 400px
 
-    background-color: #f2f2f2
+    background-color: #f8f8f8
     border: 2px dashed #ddd
     border-radius: 5px
 
     &.hover
       background-color: yellow
 
+    .step2
+      ul
+        margin: 0
+        padding: 0
+        width: 100%
+        margin-top: 10px
 
-    &.step2
-      display: none
+        li
+          list-style: none
+          margin-bottom: 5px
+          div
+            font-size: 13px
+            padding: 5px
+            border-radius: 20px
+            color: white
+
+          .progress
+            background-color: #26A2ED
+            // text-shadow: 1px 1px 1px #000
+
+    .title
+      font-weight: bold
+
+
 
 .hidden
   display: none
