--- a/assets/styles/sass/upload.sass
+++ b/assets/styles/sass/upload.sass
@@ -5,7 +5,7 @@ body
   height: 100%
 
   #upload
-    width: 50%
+    width: 600px
     box-sizing: border-box
     margin: 50px auto
     padding: 20px
@@ -19,6 +19,7 @@ body
       background-color: yellow
 
     .step2
+      position: relative
       ul
         margin: 0
         padding: 0
@@ -36,10 +37,9 @@ body
             // text-shadow: 1px 1px 1px #000
             position: relative
             background-color: white
-            border: 1px solid #ddd
             .bg
-              background-color: #26A2ED
-              height: 26px
+              background-color: #5DC0C1
+              height: 22px
               width: 0
               -webkit-transition: width 0.5s
               transition: width 0.5s
@@ -47,12 +47,46 @@ body
             span
               position: absolute
               top: 0
-              line-height: 25px
+              line-height: 22px
               padding-left: 10px
               color: white
+
+            .circle
+              width: 10px
+              height: 10px
+              background-color: #5DC0C1
+              border-radius: 50%
+              position: absolute
+              top: 7px
+              right: 10px
+
+              &.white
+                background-color: white
+                transition: background-color 400ms linear
+
+    .close-import
+      position: absolute
+      top: 0
+      right: 0
+      color: black
+      text-decoration: none
+
+    .more-files
+      background-color: #4CA2EF
+      border: none
+      color: white
+      padding: 10px 30px
+      text-align: center
+      text-decoration: none
+      display: inline-block
+      font-size: 14px
+      margin-top: 20px
 
     .title
       font-weight: bold
 
 .hidden
   display: none
+
+.text-center
+  text-align: center
